--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,9 @@
 # Build stage
 FROM eclipse-temurin:21-jdk-alpine AS build
 WORKDIR /app
+COPY .mvn/ .mvn/
+COPY mvnw ./
+RUN chmod +x mvnw
 COPY pom.xml .
 COPY src ./src
 RUN ./mvnw clean package -DskipTests || mvn clean package -DskipTests
