--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,18 +1,23 @@
-# Build stage
+# ── Build stage ──────────────────────────────────────────────
 FROM eclipse-temurin:21-jdk-alpine AS build
+RUN apk add --no-cache maven
 WORKDIR /app
-COPY .mvn/ .mvn/
-COPY mvnw ./
-RUN chmod +x mvnw
-COPY pom.xml .
-COPY src ./src
-RUN ./mvnw clean package -DskipTests || mvn clean package -DskipTests
 
-# Runtime stage
+# 1) Cache Maven dependencies (layer caching optimisation)
+COPY pom.xml .
+RUN mvn dependency:go-offline -B
+
+# 2) Build the application
+COPY src ./src
+RUN mvn clean package -DskipTests -B
+
+# ── Runtime stage ────────────────────────────────────────────
 FROM eclipse-temurin:21-jre-alpine
 WORKDIR /app
+
 RUN addgroup -S spring && adduser -S spring -G spring
 USER spring:spring
+
 COPY --from=build /app/target/*.jar app.jar
 EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "app.jar"]
