--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,11 +1,17 @@
-FROM node:20-alpine AS build
+# ── Build stage ──────────────────────────────────────────────
+FROM node:22-alpine AS build
 WORKDIR /app
-COPY package*.json ./
+
+# 1) Cache npm dependencies (layer caching optimisation)
+COPY package.json package-lock.json* ./
 RUN npm install
+
+# 2) Build the application
 COPY . .
 RUN npm run build
 
-FROM nginx:alpine
+# ── Runtime stage ────────────────────────────────────────────
+FROM nginx:stable-alpine
 COPY --from=build /app/dist /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
