--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -19,6 +19,6 @@ RUN apk add --no-cache curl && \
     addgroup -S spring && adduser -S spring -G spring
 USER spring:spring
 
-COPY --from=build /app/target/*.jar app.jar
+COPY --chown=spring:spring --from=build /app/target/*.jar app.jar
 EXPOSE 8080
 ENTRYPOINT ["sh", "-c", "java ${JAVA_OPTS} -jar app.jar"]
