--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -1,23 +1,7 @@
 server {
     listen 80;
-    server_name localhost;
-    return 301 https://$host$request_uri;
-}
+    server_name _;
 
-server {
-    listen 443 ssl http2;
-    server_name localhost;
-
-    ssl_certificate /etc/nginx/ssl/cert.pem;
-    ssl_certificate_key /etc/nginx/ssl/key.pem;
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
-    ssl_prefer_server_ciphers off;
-    ssl_session_timeout 1d;
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_tickets off;
-
-    add_header Strict-Transport-Security "max-age=63072000" always;
     add_header X-Content-Type-Options nosniff always;
     add_header X-Frame-Options DENY always;
     add_header X-XSS-Protection "1; mode=block" always;
