--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,27 +12,37 @@
     "test:watch": "vitest"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.23.0",
+    "@hookform/resolvers": "^5.2.2",
+    "axios": "^1.6.8",
+    "clsx": "^2.1.1",
     "hls.js": "^1.5.7",
     "katex": "^0.16.10",
-    "axios": "^1.6.8"
+    "lucide-react": "^0.575.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.71.2",
+    "react-router-dom": "^6.23.0",
+    "tailwind-merge": "^3.5.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^15.0.7",
+    "@types/katex": "^0.16.7",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
-    "@types/katex": "^0.16.7",
-    "@vitejs/plugin-react": "^4.2.1",
-    "@testing-library/react": "^15.0.7",
-    "@testing-library/jest-dom": "^6.4.5",
-    "typescript": "^5.4.5",
-    "vite": "^5.2.11",
-    "vitest": "^1.6.0",
-    "eslint": "^8.57.0",
     "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@typescript-eslint/parser": "^7.8.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.24",
+    "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
-    "eslint-plugin-react-refresh": "^0.4.7"
+    "eslint-plugin-react-refresh": "^0.4.7",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.2.0",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.11",
+    "vitest": "^1.6.0"
   }
 }
