--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -28,6 +28,11 @@ spring:
     baseline-on-migrate: true
     locations: classpath:db/migration
 
+  servlet:
+    multipart:
+      max-file-size: 500MB
+      max-request-size: 500MB
+
 jwt:
   secret: ${JWT_SECRET:change-me-in-production-min-256-bits}
   expiry-hours: ${JWT_EXPIRY_HOURS:24}
